[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/NewVariableTool.gd" type="Script" id=1]
[ext_resource path="res://fonts/convo_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://images/plus.png" type="Texture" id=3]

[node name="AddNewVariable" type="HBoxContainer"]
margin_top = 505.0
margin_right = 363.0
margin_bottom = 505.0
script = ExtResource( 1 )

[node name="NewVarName" type="LineEdit" parent="."]
margin_right = 179.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Name"

[node name="NewVarVal" type="LineEdit" parent="."]
margin_left = 183.0
margin_right = 308.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
custom_fonts/font = ExtResource( 2 )
align = 1
placeholder_text = "Value"

[node name="AddVariable" type="TextureButton" parent="."]
modulate = Color( 0.713726, 1, 0.694118, 1 )
margin_left = 312.0
margin_right = 362.0
margin_bottom = 50.0
texture_normal = ExtResource( 3 )
[connection signal="text_entered" from="NewVarVal" to="." method="_on_NewVarVal_text_entered"]
[connection signal="pressed" from="AddVariable" to="." method="_on_AddVariable_pressed"]
